--- a/style/InputStyle.css
+++ b/style/InputStyle.css
@@ -3,7 +3,7 @@ body{
   background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,193,249,0.7175245098039216) 35%, rgba(244,156,255,1) 100%);
 }
 
-.userDetails {
+.box {
   margin: auto;
   position: relative;
   width: 20%;
