--- a/MainMenuStyle.css
+++ b/MainMenuStyle.css
@@ -1,16 +1,12 @@
-<style>
-body {
-  font-family: Verdana, sans-serif;
-  transition: background-color .5s;
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,193,249,0.7175245098039216) 35%, rgba(244,156,255,1) 100%);
+*{
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h2{
-	text-align: center;
-	
+body{
+  font-family: Arial,Helvetica,sans-serif;
+  background-color: #111;
 }
-
 .sidenav {
   height: 100%;
   width: 0;
@@ -18,7 +14,7 @@ h2{
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #323232;
+  background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -27,7 +23,6 @@ h2{
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-family: Verdana, sans-serif;
   font-size: 25px;
   color: #818181;
   display: block;
@@ -55,4 +50,58 @@ h2{
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-</style>
+
+.row_poster{
+    width: 100%;
+    object-fit: contain;
+    max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450px;
+}
+
+.row_posters{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+.row_poster:hover{
+    transform: scale(1.08);
+}
+
+.row_posters::-webkit-scrollbar{
+    display: none;
+}
+
+.row_posterLarge{
+    max-height: 250px;
+}
+
+.row_posterLarge:hover{
+    transform: scale(1.09);
+}
+
+.row{
+    color: black;
+    margin-left: 20px;
+}
+
+.header-image {
+  background-image: url("C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\banner.jpg");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.image-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: blue;
+}
