--- a/MainMenuStyle.css
+++ b/MainMenuStyle.css
@@ -5,8 +5,70 @@
 
 body{
   font-family: Arial,Helvetica,sans-serif;
-  /*background-color: #111; */
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgb(223, 14, 170) 0%, rgba(255,193,249,0.7175245098039216) 35%, rgba(244,156,255,1) 100%);
 }
+/*
+.banner{
+  width: 100%;
+  display: block;
+}
+
+.banner > .header {
+  padding: 60px;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+} 
+
+.banner--fadeBottom{
+  margin-top: 145px;
+  height: 7.4rem;
+  background-image:-webkit-linear-gradient(180deg, transparent, rgba(37,37,37,0.61),#111);
+}
+
+.banner > .banner-image{
+  width: 100%;
+  display: block;
+}  
+*/
+
+.banner{
+  background-image: url('https://wallpaperaccess.com/full/1166813.jpg');
+  background-size: cover;
+  background-position: center center;
+  color: white;
+  object-fit:fill;
+  height: 350px;
+}
+
+.banner__contents{
+  margin-left: 30px;
+  padding-top: 160px;
+  height: 250px;
+}
+
+.banner__title{
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.9rem;
+  font-family: Cochocib Script Latin Pro;
+}
+
+/*
+.banner--fadeBottom{
+  margin-top: 10px;
+  height: 12.4rem;
+  background-image:linear-gradient(180deg, transparent, rgba(255, 255, 255, 0), rgb(95, 0, 87));
+} */
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -14,7 +76,7 @@ body{
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: purple;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -24,13 +86,13 @@ body{
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: white;
   display: block;
   transition: 0.3s;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: pink;
 } 
 
 .sidenav .closebtn {
@@ -75,6 +137,15 @@ body{
     display: none;
 }
 
+.row{
+  color: white;
+  margin-left: 10px;
+}
+
+.h2{
+  margin-left: 15px;
+}
+
 .row_posterLarge{
     max-height: 250px;
 }
@@ -83,26 +154,8 @@ body{
     transform: scale(1.09);
 }
 
-/*.row{
-    color: black;
-    margin-left: 20px;
-} */
-
-.header-image {
-  background-image: url("C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\banner.jpg");
-  background-color: #cccccc;
-  height: 500px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+#example1 .h1 {
+ text-align: center;
 }
 
-.image-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: blue;
-}
+
