--- a/style/user_style.css
+++ b/style/user_style.css
@@ -21,7 +21,6 @@ body{
 
 .User img{
 	box-shadow: -4px -1px 15px 2px rgba(0,0,0,0.41);;
-
 	border-radius: 60px;
 
 }
@@ -41,5 +40,33 @@ body{
 	background: black;
 	color: white;
 	transition: 0.5s;
+}
 
+.submitYes{
+	height: 50px;
+	width:  50%;
+	border-radius: 60px;
+	font-weight: 600;
+}
+
+.submitYes:hover{
+	background: #33cc33;
+	transition: 0.5s;
+}
+
+.submitNo:hover{
+	background: #ff3300;
+	transition: 0.5s;
+}
+
+.submitNo{
+	height: 50px;
+	width:  50%;
+	border-radius: 60px;
+	font-weight: 600;
+}
+
+.label{
+	opacity: .6;
+	font-size: 12px;
 }
